[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Characters/Player.gd" type="Script" id=1]
[ext_resource path="res://start-assets/player.png" type="Texture" id=2]
[ext_resource path="res://start-assets/cannon.png" type="Texture" id=5]
[ext_resource path="res://src/Characters/Gun.tscn" type="PackedScene" id=6]

[node name="Player" type="KinematicBody2D"]
collision_mask = 42
script = ExtResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="Player" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]
visible = false
position = Vector2( 88, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )
offset = Vector2( -84, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.500005, 0.0999985 )
scale = Vector2( 0.761719, 1.0013 )
polygon = PoolVector2Array( 34, -47, 37, -47, 37, -46, 39, -46, 39, -45, 40, -45, 40, -44, 41, -44, 41, -43, 42, -43, 42, -42, 43, -42, 43, -41, 44, -41, 44, -40, 45, -40, 45, -39, 46, -39, 46, -37, 47, -37, 47, -34, 48, -34, 48, 34, 47, 34, 47, 37, 46, 37, 46, 39, 45, 39, 45, 40, 44, 40, 44, 41, 43, 41, 43, 42, 42, 42, 42, 43, 41, 43, 41, 44, 40, 44, 40, 45, 39, 45, 39, 46, 37, 46, 37, 47, 34, 47, 34, 48, -34, 48, -34, 47, -37, 47, -37, 46, -39, 46, -39, 45, -40, 45, -40, 44, -41, 44, -41, 43, -42, 43, -42, 42, -43, 42, -43, 41, -44, 41, -44, 40, -45, 40, -45, 39, -46, 39, -46, 37, -47, 37, -47, 34, -48, 34, -48, -34, -47, -34, -47, -37, -46, -37, -46, -39, -45, -39, -45, -40, -44, -40, -44, -41, -43, -41, -43, -42, -42, -42, -42, -43, -41, -43, -41, -44, -40, -44, -40, -45, -39, -45, -39, -46, -37, -46, -37, -47, -34, -47, -34, -48, 34, -48 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
process_mode = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_right = 0.0

[node name="EnemyDetect" type="Area2D" parent="."]
collision_mask = 18
monitorable = false

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="EnemyDetect"]
polygon = PoolVector2Array( 34, -47, 37, -47, 37, -46, 39, -46, 39, -45, 40, -45, 40, -44, 41, -44, 41, -43, 42, -43, 42, -42, 43, -42, 43, -41, 44, -41, 44, -40, 45, -40, 45, -39, 46, -39, 46, -37, 47, -37, 47, -34, 48, -34, 48, 34, 47, 34, 47, 37, 46, 37, 46, 39, 45, 39, 45, 40, 44, 40, 44, 41, 43, 41, 43, 42, 42, 42, 42, 43, 41, 43, 41, 44, 40, 44, 40, 45, 39, 45, 39, 46, 37, 46, 37, 47, 34, 47, 34, 48, -34, 48, -34, 47, -37, 47, -37, 46, -39, 46, -39, 45, -40, 45, -40, 44, -41, 44, -41, 43, -42, 43, -42, 42, -43, 42, -43, 41, -44, 41, -44, 40, -45, 40, -45, 39, -46, 39, -46, 37, -47, 37, -47, 34, -48, 34, -48, -34, -47, -34, -47, -37, -46, -37, -46, -39, -45, -39, -45, -40, -44, -40, -44, -41, -43, -41, -43, -42, -42, -42, -42, -43, -41, -43, -41, -44, -40, -44, -40, -45, -39, -45, -39, -46, -37, -46, -37, -47, -34, -47, -34, -48, 34, -48 )

[node name="Gun" parent="." instance=ExtResource( 6 )]

[node name="gun_player" parent="Gun" index="0"]
visible = false

[connection signal="area_entered" from="EnemyDetect" to="." method="_on_EnemyDetect_area_entered"]
[connection signal="body_entered" from="EnemyDetect" to="." method="_on_EnemyDetect_body_entered"]

[editable path="Gun"]
